<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AhorrarDinero">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:text="@string/lblAhorrarDinero"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-light"
            android:gravity="bottom"
            android:text="@string/lblAgregarMontoSaldo"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtAgregarMonto"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnGuardarDinero"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardar"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>