<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SacarDinero">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/lblSacarDinero"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:fontFamily="sans-serif"
            android:text="@string/lblRetirarMonto"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtRetirarDinero"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnGuardarSacar"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/btnGuardarSacar"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>